crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__subroutine__extern.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/subroutine/extern.qasm
expect-lex: Ok
--- source ---

extern test_kern(bit[5], uint[10], float[16], complex[float[64]]) -> float[6];
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "extern" @1..7
[2] Whitespace " " @7..8
[3] Ident "test_kern" @8..17
[4] OpenParen "(" @17..18
[5] Ident "bit" @18..21
[6] OpenBracket "[" @21..22
[7] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "5" @22..23
[8] CloseBracket "]" @23..24
[9] Comma "," @24..25
[10] Whitespace " " @25..26
[11] Ident "uint" @26..30
[12] OpenBracket "[" @30..31
[13] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "10" @31..33
[14] CloseBracket "]" @33..34
[15] Comma "," @34..35
[16] Whitespace " " @35..36
[17] Ident "float" @36..41
[18] OpenBracket "[" @41..42
[19] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "16" @42..44
[20] CloseBracket "]" @44..45
[21] Comma "," @45..46
[22] Whitespace " " @46..47
[23] Ident "complex" @47..54
[24] OpenBracket "[" @54..55
[25] Ident "float" @55..60
[26] OpenBracket "[" @60..61
[27] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "64" @61..63
[28] CloseBracket "]" @63..64
[29] CloseBracket "]" @64..65
[30] CloseParen ")" @65..66
[31] Whitespace " " @66..67
[32] Minus "-" @67..68
[33] Gt ">" @68..69
[34] Whitespace " " @69..70
[35] Ident "float" @70..75
[36] OpenBracket "[" @75..76
[37] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "6" @76..77
[38] CloseBracket "]" @77..78
[39] Semi ";" @78..79
[40] Whitespace "\n" @79..80
