crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__subroutine__extern.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/subroutine/extern.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..118: // lex: ok
// parse: ok
// sema: todo

extern test_kern(bit[5], uint[10], float[16], complex[float[64]]) -> float[6];

EXTERN_STMT@39..117: extern test_kern(bit[5], uint[10], float[16], complex[float[64]]) -> float[6];
NAME@46..55: test_kern
TYPE_LIST@55..104: (bit[5], uint[10], float[16], complex[float[64]])
SCALAR_TYPE@56..62: bit[5]
SCALAR_TYPE@56..62: bit[5]
DESIGNATOR@59..62: [5]
LITERAL@60..61: 5
SCALAR_TYPE@64..72: uint[10]
SCALAR_TYPE@64..72: uint[10]
DESIGNATOR@68..72: [10]
LITERAL@69..71: 10
SCALAR_TYPE@74..83: float[16]
SCALAR_TYPE@74..83: float[16]
DESIGNATOR@79..83: [16]
LITERAL@80..82: 16
SCALAR_TYPE@85..103: complex[float[64]]
SCALAR_TYPE@85..103: complex[float[64]]
SCALAR_TYPE@93..102: float[64]
DESIGNATOR@98..102: [64]
LITERAL@99..101: 64
RETURN_SIGNATURE@105..116: -> float[6]
SCALAR_TYPE@108..116: float[6]
DESIGNATOR@113..116: [6]
LITERAL@114..115: 6
